fix(бестиарий): всегда пересчитывать опыт из уровня опасности при сохранении
- Creature: @PrePersist/@PreUpdate пересчитывает exp из challenge_rating при любом сохранении
- ChallengeRating.getExp: проверка пустого CR совместима с Java 8 (trim().isEmpty())